[project]
name = "kubesure"
version = "0.0.1"
description = "Kubesure: Centralizes the best tools in the Kubernetes ecosystem to ensure security, compliance, and design standards in your YAML files."
authors = [
    { name = "Felipe R. Broering", email = "feliperodriguesbroering@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.4.2",
    "ruff>=0.6.2",
    "python-semantic-release>=10.0.0,<11.0.0",
]

[tool.pytest.ini_options]
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
log_cli = true
log_cli_level = 'INFO'
pythonpath = "."
testpaths = ["tests"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = []

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["kubesure/__version__.py:__version__:nf"]
build_command = "uv build"
upload_to_vcs_release = true
hvcs = "github"
tag_format = "v{version}"

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
patch_tags = ["chore", "fix", "refactor"]

[tool.hatch.build.targets.wheel]
packages = ["kubesure"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kubesure = "kubesure.cli:app"
